CBQE-6537: fix the missing left navigation on mobile phone view
Reviewed-on: http://review.couchbase.org/c/greenboard/+/147185
Tested-by: Jake Rawsthorne <jake.rawsthorne@couchbase.com>

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -34,9 +34,7 @@ body {
  */
 
 /* Hide for mobile, show later */
-.sidebar {
-  display: none;
-}
+
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
